todo update ranks

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid">Leetcode 2024 - rank</span>
-										<a href ="certificates/Leetcode-Vaibhav.pdf" target="_blank" ><strong>rank - 2117</strong></a>
+										<a href ="certificates/Leetcode-Vaibhav.pdf" target="_blank" ><strong>todo update rank</strong></a>
 									</li>
 									<li class="style2">
 										<span class="icon solid">Leetcode profile</span>
-										<a href ="https://leetcode.com/u/mannuNITW/" target="_blank"><strong>rank - 679</strong></a>
+										<a href ="https://leetcode.com/u/mannuNITW/" target="_blank"><strong>todo update rank</strong></a>
 									</li>
 									<li class="style3">
 										<span class="icon solid">1 star Codechef<br>highest rating - </span>
