--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 										</header>
 										<p>Tech enthusiast with a solid foundation in problem-solving and software development, currently pursuing a B.Tech degree.
 											<p>Experienced in debugging, automation, and programming, with a passion for creating efficient and innovative solutions.</p>
-											<p>Proven ability to manage responsibilities and collaborate effectively as a mess representative and volunteer. Skilled in MATLAB, Python, and C++, with hands-on project experience in automation and process optimization.
+											<p>Proven ability to manage responsibilities and collaborate effectively as a mess representative and volunteer. Skilled in MATLAB, Java ,Python, and C++, with hands-on project experience in automation and process optimization.
 											</p>
 											<p>Eager to leverage technical expertise in a software engineering role.</p>
 										<p>I'm persuing a B.Tech degree from NIT Warangal.</p>
